Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

09-Nov-2010 Christophe Demko
 # [#23170] Itemid is lost when browsing from content which is not linked to a menu item
 # [#22298] Renaming JUser method (Dennis Hermacki)

09-Nov-2010 Jean-Marie Simonet
 # [#23177] Ability to set a default template style per language when System - Language Filter plugin is on. Thanks Christophe.
 # [#23132] Some language have issues when translating global strings such as JALL. Thanks Christophe.
 # [#22839] author link redirects to login form and not to profile of author. Thanks Elin and Bill.
 $ [#23149] COM_USERS_ACTIVATION_TOKEN_NOT_FOUND message has no translation. Thanks Ronald
  
09-Nov-2010 Mark Dexter
# [#23054] Follow up on Issue 22932 - Alternate Layouts for Components
# Fix PHP notice problem with [#23054] 

08-Nov-2010 Ian MacLennan
 # [21571] Reverting commit to examine closer

08-Nov-2010 Christophe Demko
 # [#23160] Give each manager the possibility to choose its own admin template style

07-Nov-2010 Jean-Marie Simonet
 # [#22757] Wrong urls being produced for drill downs. Thanks Christophe.
 # [#23159] Improving display of back-end mod_latest module
 $ Added ® to Joomla! instances in footers
 $ Deleted some redundant or obsolete ini strings

07-Nov-2010 Mark Dexter
# [#22776] Incorrect path field and child item path fields not being changed on save.

07-Nov-2010 Christophe Demko
 # [#21789] Category Manger save alias as date instead of category name when renaming a category (Elin Waring)
 # [#21571] category blog view drill down does not maintain layout style
 # [#22515] P3P tags are hardcoded in JSession (Nicholas Dionysopoulos)
 ^ Fix some issues relative to #21571

06-Nov-2010 Christophe Demko
 # [#21577] Pagebreak Plugin called via JHtml::_('content.prepare') issue

06-Nov-2010 Jean-Marie Simonet