@@ -14,7 +14,7 @@ defined('_JEXEC') or die;
  * Joomla! system checks.
  */
 
-@set_magic_quotes_runtime(0);
+@ini_set('magic_quotes_runtime', 0);
 @ini_set('zend.ze1_compatibility_mode', '0');
 
 /*
